updated decimal and some minor bug fixes

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
                 </div>
                 <div class="operator-buttons-container">
                     <div class="operator-buttons-row">
-                        <button id='7-button' class="number-button">7</button>
-                        <button id='8-button' class="number-button">8</button>
-                        <button id='9-button' class="number-button">9</button>
-                        <button id='/-button' class="operator-button">/</button>
+                        <button id='7-button' class="number-button pad-button">7</button>
+                        <button id='8-button' class="number-button pad-button">8</button>
+                        <button id='9-button' class="number-button pad-button">9</button>
+                        <button id='/-button' class="operator-button pad-button">/</button>
                     </div>
                     <div class="operator-buttons-row">
-                        <button id='4-button' class="number-button">4</button>
-                        <button id='5-button' class="number-button">5</button>
-                        <button id='6-button' class="number-button">6</button>
-                        <button id='*-button' class="operator-button">*</button>
+                        <button id='4-button' class="number-button pad-button">4</button>
+                        <button id='5-button' class="number-button pad-button">5</button>
+                        <button id='6-button' class="number-button pad-button">6</button>
+                        <button id='*-button' class="operator-button pad-button">*</button>
                     </div>
                     <div class="operator-buttons-row">
-                        <button id='1-button' class="number-button">1</button>
-                        <button id='2-button' class="number-button">2</button>
-                        <button id='3-button' class="number-button">3</button>
-                        <button id='--button' class="operator-button">-</button>
+                        <button id='1-button' class="number-button pad-button">1</button>
+                        <button id='2-button' class="number-button pad-button">2</button>
+                        <button id='3-button' class="number-button pad-button">3</button>
+                        <button id='--button' class="operator-button pad-button">-</button>
                     </div>
                     <div class="operator-buttons-row">
-                        <button id='.-button' class="operator-button">.</button>
-                        <button id='0-button' class="number-button">0</button>
-                        <button id='=-button' class="equals-button">=</button>
-                        <button id='+-button' class="operator-button">+</button>
+                        <button id='.-button' class="decimal-button pad-button">.</button>
+                        <button id='0-button' class="number-button pad-button">0</button>
+                        <button id='=-button' class="equals-button pad-button">=</button>
+                        <button id='+-button' class="operator-button pad-button">+</button>
                     </div>
                 </div>
             </div>
